Closed Bug 488979 Opened 15 years ago Closed 15 years ago

|mailnews/base/src/nsMsgBiffManager.cpp(261) : warning C4244: 'initializing' : conversion from 'double' to 'PRInt64', possible loss of data|

Categories

(MailNews Core :: Backend, defect)

defect
Not set
minor

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird 3.0b4

People

(Reporter: sgautherie, Assigned: sgautherie)

References

Details

Attachments

(1 file)

[Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.9.2a1pre) Gecko/20090417 SeaMonkey/2.0b1pre] (experimental/_m-c_, home, optim default) (W2Ksp4)
(http://hg.mozilla.org/mozilla-central/rev/9e06217fc471
 +http://hg.mozilla.org/comm-central/rev/...)

Code is
{
      PRInt64 jitter = (PRInt64)(chosenTimeInterval) * 0.05;
}
Assignee: nobody → sgautherie.bz
Status: NEW → ASSIGNED
Attachment #373472 - Flags: superreview?(bienvenu)
Attachment #373472 - Flags: review?(mkmelin+mozilla)
Comment on attachment 373472 [details] [diff] [review]
(Av1) Fix nits in SetNextBiffTime()
[Checkin: Comment 4]

Not that i'm a /mailnews reviewer... but my compiler doesn't complain about that.

Otherwise I suppose it looks ok.
Attachment #373472 - Flags: review?(mkmelin+mozilla)
Attachment #373472 - Flags: review?(bienvenu)
bienvenu, ping for review.
Attachment #373472 - Flags: superreview?(bienvenu)
Attachment #373472 - Flags: superreview+
Attachment #373472 - Flags: review?(bienvenu)
Attachment #373472 - Flags: review+
Comment on attachment 373472 [details] [diff] [review]
(Av1) Fix nits in SetNextBiffTime()
[Checkin: Comment 4]


http://hg.mozilla.org/comm-central/rev/a0da9ca1c4b2
Attachment #373472 - Attachment description: (Av1) Fix nits in SetNextBiffTime() → (Av1) Fix nits in SetNextBiffTime() [Checkin: Comment 4]
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Flags: in-testsuite-
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 3.0b4
Is Bug 509747 regression produced by this bug?
Depends on: 509747
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: