Bug 488979 - |mailnews/base/src/nsMsgBiffManager.cpp(261) : warning C4244: 'initializing' : conversion from 'double' to 'PRInt64', possible loss of data|; (Av1) Fix nits in SetNextBiffTime(); r+sr=bienvenu